# Chorus

./: .gitignore  CMakeLists.txt  README.md  example_query  example_query8_60
gpu-sw/: CMakeLists.txt  core.hh  cuda-utils.cc  cuda-utils.hh  mats.cc  seqs.cc  seqs.hh  sw-lib.cc  sw-lib.hh  sw.cu  sw.hh
include/: argparse.hpp  blastp.h  cudaTool.h  hash_table.h  output.h  params.h  qit.h  query_group.h  smith.h  util.h
query/S8_CrossoverPointQuerys/: A.fasta  Q_1.fa  Q_10.fa  Q_100.fa  Q_101.fa  Q_102.fa  Q_103.fa  Q_104.fa  Q_105.fa  Q_106.fa  Q_107.fa  Q_108.fa  Q_109.fa  Q_11.fa  Q_110.fa  Q_111.fa  Q_112.fa  Q_113.fa  Q_114.fa  Q_115.fa  Q_116.fa  Q_117.fa  Q_118.fa  Q_119.fa  Q_12.fa  Q_120.fa  Q_121.fa  Q_122.fa  Q_123.fa  Q_124.fa  Q_125.fa  Q_126.fa  Q_127.fa  Q_128.fa  Q_129.fa  Q_13.fa  Q_130.fa  Q_131.fa  Q_132.fa  Q_133.fa  (+960 more)
script/alignment-tools-sh-script/: chorus.sh  diamond.sh  mmseqs2.sh
script/cross-over-point/: analize_time_mmseqs2.py  analyze_time_chorus.py  analyze_time_diamond.py
script/other/: cache.sh
script/preprocess-data/: getQueryFromDataBase.py
script/tmscore/: TMscore_cpp  check_tmscore.sh  col.py
src/: banded_smith_cpu.cpp  blastp.cu  createDB.cpp  cudaTool.cu  hash_table.cu  main.cpp  output.cpp  qit.cpp  query_group.cu  util.cpp
tools/: cache.sh  drop-cache.sh
